--- a/src/app.css
+++ b/src/app.css
@@ -2,7 +2,7 @@
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
 @plugin "daisyui" {
-    themes: forest --default;
+    themes: night --default;
 }
 
 @tailwind base;
